# shopee-marketing-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/campaigns/: README.md
.claude/playbooks/: launch-flash-sale.md  new-product-listing-copy.md  respond-to-customer-inquiry.md  weekly-performance-report.md
.claude/reports/: README.md
.claude/scripts/: pull_shopee_data.py
.claude/templates/ad-copy/: shopee-flash-sale.md
.claude/templates/chat-responses/: order-inquiry.md
.claude/templates/product-descriptions/: standard-listing.md
.claude/templates/social-captions/: instagram-caption.md
.github/workflows/: ci.yml
src/shopee_marketing_ai/: config.py  data.py
src/shopee_marketing_ai/analytics/: metrics.py  models.py  reports.py
src/shopee_marketing_ai/campaigns/: models.py  scheduler.py  storage.py
src/shopee_marketing_ai/content/: generator.py
src/shopee_marketing_ai/engagement/: responder.py  triage.py
src/shopee_marketing_ai/integrations/: shopee_api.py
tests/: test_config.py  test_data.py
tests/analytics/: test_metrics.py  test_models.py  test_reports.py
tests/campaigns/: test_models.py  test_scheduler.py  test_storage.py
tests/content/: test_generator.py
tests/engagement/: test_responder.py  test_triage.py
tests/integrations/: test_shopee_api.py
